# rp4k_game_engine_em

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
include/: component.h  ecs.h  engine.h
include/interface/: button.h  button_map.h  main_camera.h  pause_menu.h  states.h  tile.h
include/systems/: animation.h  input.h  movement.h  physics.h  render.h  tilemap.h
src/: engine.cc  main.cc
src/interface/: button.cc  button_map.cc  main_camera.cc  pause_menu.cc  states.cc  tile.cc
src/systems/: animation.cc  input.cc  movement.cc  physics.cc  render.cc  tilemap.cc
